<resources>

    <string name="app_name">SoundZen</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mymusic_loading_title">Cargando…</string>
    <string name="download_loading_title">Descargando…</string>
    <string name="searching_loading_title">Buscando coincidencia…</string>

    <!-- Preference Titles -->
    <string name="preference_theme_header">Tema de la aplicación</string>
    <string name="preference_order_header">Criterio de ordenación de las canciones</string>
    <string name="preference_player_order_header">Criterio de reproducción de las canciones</string>
    <string name="preference_player_songs_location_header">Ubicación para buscar tu música</string>

    <!-- Preferences messages -->
    <string name="preference_theme_title">Tema oscuro</string>
    <string name="preference_theme_summary_on">Sound Zen mostrará su tema oscuro</string>
    <string name="preference_theme_summary_off">Sound Zen mostrará su tema claro</string>
    <string name="preference_songs_order">Selecciona el orden</string>
    <string name="preference_songs_player_order">Selecciona el modo de reproducción</string>
    <string name="order_entries_text1">Título canción</string>
    <string name="order_entries_text2">Artista</string>
    <string name="player_order_entries_text1">Secuencial</string>
    <string name="player_order_entries_text2">Aleatorio</string>
    <string name="preference_player_songs_location">Directorio de música</string>

    <!-- Preferences keys -->
    <string name="preference_theme_key">soundzen_theme_key</string>
    <string name="preference_order_list_key">soundzen_default_sort_key</string>
    <string name="preference_player_order_key">soundzen_default_player_order_key</string>
    <string name="preference_location_path_key">soundzen_location_path_key</string>

    <string name="action_my_music">Mi Música</string>
    <string name="action_download_music">Descargar</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_settings">Preferencias</string>

    <!-- MyMusicFragment -->
    <string name="all_music_tab_title">Canciones</string>
    <string name="directories_tab_title">Carpetas</string>
    <string name="fav_music_tab_title">Favoritas</string>
    <string name="playlist_tab_title">Playlists</string>

    <string name="my_music_list_no_data">No se ha encontrado música que mostrar aún</string>
    <string name="my_music_list_no_data2">Descarga tu primera canción o trae tu música al directorio:\n\"%s\"</string>
    <string name="btn_goToDirectory_text">Ir a directorio</string>
    <string name="delete_song_dialog_title">Atención</string>
    <string name="delete_song_dialog_message">¿Seguro que desea eliminar la canción?</string>
    <string name="delete_song_error_dialog_title">Error</string>
    <string name="delete_song_error_dialog_message">No pudo eliminarse la canción</string>
    <string name="Toast_song_deleted_message">Canción eliminada con éxito</string>
    <string name="search_view_hint">Buscar canción...</string>

    <string name="refresh_button_text">Refrescar</string>

    <!-- MusicDirectoriesFragment -->
    <string name="music_directories_list_no_data">No se han encontrado directorios a mostrar</string>
    <string name="music_directories_list_no_data2">Crea tus carpetas para separar tu música en:\n\"%s\"</string>

    <!-- DownloadMusicYTFragment -->
    <string name="btn_downloadmp3_text">Descargar MP3</string>
    <string name="tie_YouTube_link_hint">Enlace YouTube</string>
    <string name="tie_Artist_Name_hint">Nombre del artista</string>
    <string name="tie_Song_Name_hint">Nombre de la canción</string>
    <string name="url_mandatory_error">Debes introducir una url</string>
    <string name="artist_mandatory_error">Debes introducir el nombre del artista</string>
    <string name="song_mandatory_error">Debes introducir el título de la canción</string>
    <string name="url_invalid_error">Debes introducir una url válida</string>
    <string name="dialog_title">Descarga completada</string>
    <string name="dialog_message">Se ha descargado tu canción en la ubicación especificada</string>
    <string name="download_search_tab_text">Buscar Canción</string>

    <!-- DownloadMusicSearchFragment -->
    <string name="til_search_hint">Introduce la canción y/o el artista</string>
    <string name="btn_searchmp3_text">Buscar canción</string>
    <string name="search_dialog_title">Canción encontrada</string>
    <string name="search_dialog_message">Sube el volumen, ¡Está sonando la canción!\n\n¿Es esta la que buscas?</string>
    <string name="search_error_dialog_title">Canción no encontrada</string>
    <string name="search_error_dialog_message">Asegúrate de introducir correctamente los datos de la canción y prueba de nuevo.\n\nSi persiste este error, intenta usar la herramienta de descarga por link.</string>

    <!-- SongDetailsFragment -->
    <string name="switch_favourite_label">En favoritas</string>
    <string name="switch_loop_label">Reproducción en bucle</string>

    <!-- FavouriteSongsFragment -->
    <string name="favourites_list_no_data">Aún no tienes canciones en favoritas</string>
    <string name="favourites_list_no_data2">Puedes añadirlas desde la ventana de reproducción</string>
    <string name="delete_favourite_dialog_title">Atención</string>
    <string name="delete_favourite_dialog_message">¿Seguro que desea eliminar la canción de favoritos?</string>
    <string name="delete_favourite_error_dialog_title">Error</string>
    <string name="delete_favourite_error_dialog_message">No pudo eliminarse la canción</string>
    <string name="Toast_favourite_deleted_message">Canción eliminada de favoritos con éxito</string>

    <string name="alert_dialog_option1">Añadir o eliminar de favoritos</string>
    <string name="alert_dialog_option2">Añadir a una playlist</string>
    <string name="alert_dialog_option3">Eliminar canción</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    <string name="no_playlists_toast_message">No tienes ninguna playlist</string>

    <!-- PlaylistFragment -->
    <string name="playlist_no_data">No se han creado listas de reproducción aún</string>
    <string name="playlist_no_data2">Crea tu primera lista de reproducción pulsando \"+\"</string>
    <string name="delete_playlist_dialog_title">Atención</string>
    <string name="delete_playlist_dialog_message">¿Seguro que desea eliminar la lista de reproducción?</string>
    <string name="delete_playlist_error_dialog_title">Error</string>
    <string name="delete_playlist_error_dialog_message">No pudo eliminarse la playlist</string>
    <string name="Toast_playlist_deleted_message">Playlist eliminada con éxito</string>
    <string name="item_playlist_size_text">Canciones en la playlist:   </string>

    <!-- CreatePlaylistFragment -->
    <string name="create_playlist_title">Crea tu playlist</string>
    <string name="tie_create_playlist_hint">Introduce el nombre para tu playlist</string>
    <string name="tie_create_playlist_error">Debes introducir un nombre</string>
    <string name="tie_create_playlist_duplicate_error">Ya existe una playlist con ese nombre</string>
    <string name="create_playlist_explanation">¡Añade canciones a tu playlist desde el listado!</string>
    <string name="create_playlist_success">¡Tu playlist se ha añadido!</string>

    <!-- ChoosePlaylistFragment -->
    <string name="choose_playlist_title">Elige la playlist a la que añadir la canción</string>
    <string name="choose_playlist_button_text">Añadir a la playlist</string>
    <string name="choose_playlist_success_toast">Canción añadida a la playlist</string>

    <!-- SongsPlaylistFragment -->
    <string name="songs_playlist_no_data">Esta playlist está vacía</string>
    <string name="songs_playlist_no_data2">Añade canciones a la playlist desde el listado</string>
    <string name="delete_song_playlist_dialog_title">Atención</string>
    <string name="delete_song_playlist_dialog_message">¿Seguro que desea eliminar la canción de la playlist?</string>
    <string name="delete_song_playlist_error_dialog_title">Error</string>
    <string name="delete_song_playlist_error_dialog_message">No pudo eliminarse la canción</string>
    <string name="Toast_song_playlist_deleted_message">Canción eliminada de la playlist con éxito</string>

</resources>