<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_theme_header">

        <SwitchPreferenceCompat
            app:key="@string/preference_theme_key"
            app:summaryOff="@string/preference_theme_summary_off"
            app:summaryOn="@string/preference_theme_summary_on"
            app:title="@string/preference_theme_title"
            android:icon="@drawable/ic_dark_mode"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_order_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/order_entries"
            android:entryValues="@array/order_values"
            android:key="@string/preference_order_list_key"
            android:title="@string/preference_songs_order"
            android:icon="@drawable/ic_sort"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_player_order_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/player_order_entries"
            android:entryValues="@array/player_order_values"
            android:key="@string/preference_player_order_key"
            android:title="@string/preference_songs_player_order"
            android:icon="@drawable/ic_shuffle"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_player_songs_location_header">

        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="/storage/emulated/0/Music/"
            android:selectAllOnFocus="true"
            android:icon="@drawable/ic_action_directory_path"
            android:singleLine="true"
            android:key="@string/preference_location_path_key"
            android:title="@string/preference_player_songs_location" />
    </PreferenceCategory>

</PreferenceScreen>