<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_my_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mymusic.all_music.MyMusicFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_view_bg"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_view_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_music"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageView
        android:id="@+id/img_circle"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="112dp"
        android:visibility="gone"
        android:src="@drawable/black_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#6087AE" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewItemList"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_circle"
        app:layout_constraintEnd_toEndOf="@+id/img_circle"
        app:layout_constraintStart_toStartOf="@+id/img_circle"
        app:layout_constraintTop_toTopOf="@+id/img_circle"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/nodata" />

    <TextView
        android:id="@+id/tv_my_music_no_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/calling_code"
        android:text="@string/my_music_list_no_data"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/animationViewItemList"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/animationViewItemList"
        app:layout_constraintTop_toBottomOf="@+id/img_circle" />

    <TextView
        android:id="@+id/tv_my_music_no_data2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calling_code"
        android:text="@string/my_music_list_no_data2"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/animationViewItemList"
        app:layout_constraintStart_toStartOf="@+id/animationViewItemList"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_music_no_data" />

    <Button
        android:id="@+id/btnGoToDirectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_goToDirectory_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_music_no_data2" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:text="@string/refresh_button_text"
        app:layout_constraintEnd_toEndOf="@+id/btnGoToDirectory"
        app:layout_constraintStart_toStartOf="@+id/btnGoToDirectory"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToDirectory" />

</androidx.constraintlayout.widget.ConstraintLayout>